fix friend link error

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -19,19 +19,19 @@
     <link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
     <!-- GrowingIO 统计 -->
     <script type='text/javascript'>
-      var _vds = _vds || [];
-      window._vds = _vds;
-      (function(){
-        _vds.push(['setAccountId', '84ec9de1506d36be']);
+        var _vds = _vds || [];
+        window._vds = _vds;
         (function() {
-          var vds = document.createElement('script');
-          vds.type='text/javascript';
-          vds.async = true;
-          vds.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'dn-growing.qbox.me/vds.js';
-          var s = document.getElementsByTagName('script')[0];
-          s.parentNode.insertBefore(vds, s);
+            _vds.push(['setAccountId', '84ec9de1506d36be']);
+            (function() {
+                var vds = document.createElement('script');
+                vds.type = 'text/javascript';
+                vds.async = true;
+                vds.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'dn-growing.qbox.me/vds.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(vds, s);
+            })();
         })();
-      })();
     </script>
     <!-- GrowingIO End -->
 </head>
@@ -177,87 +177,87 @@
                     <ul>
                         <li>
                             <a href="http://gank.io" title="干货集中营，每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频">
-                                <img src="http://ww1.sinaimg.cn/large/610dc034gw1f1lnnpb9tej203n01sdfn.jpg" />
+                                <img src="https://ww1.sinaimg.cn/large/610dc034gw1f1lnnpb9tej203n01sdfn.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://stormzhang.com" title="Android开发者 + Ruby语言爱好者 + Google脑残粉，爱技术，爱尝鲜，爱开源，爱设计，也爱赚钱！ 热爱并沉溺于移动互联网，Want to make a good app!">
-                                <img src="http://stormzhang.com/image/avatar_64.png" />
+                                <img src="https://ww2.sinaimg.cn/large/610dc034gw1f1qxp38lqhj203m01s3yc.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://www.codekk.com" title="codeKK，专注于开源项目源码解析及优秀开源项目的分享">
-                                <img src="http://www.codekk.com/images/codekk-com-130-64.png" />
+                                <img src="https://ws3.sinaimg.cn/large/0069RVTdly1fu7rs8bnwqj303m01smx2.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://www.trinea.cn/" title="Trinea，目前在滴滴出行担任技术专家，主攻 Java 和 Android，专于性能调优和框架设计。">
-                                <img src="http://www.codekk.com/images/trinea-cn-130-64.png" />
+                                <img src="https://ws4.sinaimg.cn/large/0069RVTdly1fu7rsf2o3vj303m01sq2u.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://www.liaohuqiu.net" title="秋百万，Make it better.">
-                                <img src="http://ww2.sinaimg.cn/large/86e2ff85gw1f1qvio0f2ej203m01s0sl.jpg" />
+                                <img src="https://ww2.sinaimg.cn/large/86e2ff85gw1f1qvio0f2ej203m01s0sl.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://droidyue.com/" title="技术小黑屋，Android 工程师，Infoq译者， 2015 GDG Devfest讲师;不是90后，89年出生的保定人在北京;喜欢终端上完成操作，对GUI有点偏见;一个优秀的程序员应该是一位艺术家，其代码不可增不可减。">
-                                <img src="http://7jpolu.com1.z0.glb.clouddn.com/droidyue_com.png" />
+                                <img src="https://ws1.sinaimg.cn/large/0069RVTdly1fu4e8vt3n5j303m01sgli.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://drakeet.me" title="Drakeet">
-                                <img src="http://ww4.sinaimg.cn/large/86e2ff85gw1f1jt6vd4snj203m01sjra.jpg" />
+                                <img src="https://ww4.sinaimg.cn/large/86e2ff85gw1f1jt6vd4snj203m01sjra.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://hukai.me" title="Hi，我是胡凯，就职于腾讯从事Android开发的工作。">
-                                <img src="http://hukai.me/images/avatar/130_64.jpg" />
+                                <img src="https://ws4.sinaimg.cn/large/0069RVTdly1fu7rsqt1koj303m01s3ye.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://androidweekly.cn" title="Android 开发技术周报,汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">
-                                <img src="http://7xrhuv.com1.z0.glb.clouddn.com/androidweekly_cn.png" />
+                                <img src="https://ws3.sinaimg.cn/large/0069RVTdly1fu7rqqp93cj303m01sq2w.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://www.race604.com" title="专注 Android 移动应用开发，在开发中积累和成长。">
-                                <img src="http://ws2.sinaimg.cn/large/006tNc79ly1fgt5qreedyj303m01s0sl.jpg" />
+                                <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fgt5qreedyj303m01s0sl.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://kymjs.com" title="Hello，大家好，我是张涛，网名kymjs，在深圳的湖北人。开源中国移动开发工程师。爱看书，爱敲码，善于交流，乐于分享。曾担任电影《天籁：一万年以后》新媒体推广产品经理，负责电影推广营销事项。">
-                                <img src="http://ww1.sinaimg.cn/large/8a41f469jw1f27ukzgjhuj203m01s0tb.jpg" />
+                                <img src="https://ww1.sinaimg.cn/large/8a41f469jw1f27ukzgjhuj203m01s0tb.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://www.devtf.cn" target="_blank" title="开发技术前线 ( Dev Tech Frontier ) 是一个各个IT领域 ( 前期只有Android和iOS )高质量技术文章、开源库、技术咨询的聚合网站，通过引入最新的优质文章，让我们的技术跟上国际步伐。该网站由Mr.Simple、chaossss、tiny-times、dupengwei创立，并且由开发技术前线Android开源组与开发技术前线iOS开源组维护,希望我们做的这些对大家有一点帮助。">
-                                <img src="http://ww1.sinaimg.cn/large/8a41f469jw1f29a4e11baj203m01st8i.jpg" />
+                                <img src="https://ww1.sinaimg.cn/large/8a41f469jw1f29a4e11baj203m01st8i.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://diycode.cc" target="_blank" title="DiyCode是一个优雅、极客、创意、分享、美好的开发社区">
-                                <img src="http://ww2.sinaimg.cn/mw690/6ff56379jw1f339yb3a5oj203m01sweb.jpg" />
+                                <img src="https://ww2.sinaimg.cn/mw690/6ff56379jw1f339yb3a5oj203m01sweb.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://gityuan.com" target="_blank" title="Android 系统工程师，专注于 Android 最新源码的架构分析">
-                                <img src="http://ww3.sinaimg.cn/large/8a41f469jw1f62jpc97ujj203m01sq2q.jpg" />
+                                <img src="https://ww3.sinaimg.cn/large/8a41f469jw1f62jpc97ujj203m01sq2q.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://www.gcssloop.com" target="_blank" title="一名来自2.5次元的魔法师，Android自定义View系列文章作者，非著名程序员">
-                                <img src="http://www.gcssloop.com/assets/siteinfo/friends/gcssloop.jpg" />
+                                <img src="https://www.gcssloop.com/assets/siteinfo/friends/gcssloop.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://www.materialdoc.cn" target="_blank" title="Material Design 开发者参考文档">
-                                <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fgf49wir8cj303m01saa3.jpg" />
+                                <img src="https://ws1.sinaimg.cn/large/006tKfTcly1fgf49wir8cj303m01saa3.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://code-labs.cn/io2017" target="_blank" title="Google I/O CodeLabs 2017">
-                                <img src="http://ws2.sinaimg.cn/large/006tKfTcly1fgf49wogaoj303m01s0sq.jpg" />
+                                <img src="https://ws2.sinaimg.cn/large/006tKfTcly1fgf49wogaoj303m01s0sq.jpg" />
                             </a>
                         </li>
                         <li>
@@ -303,7 +303,7 @@
                     </ul>
                 </div>
             </div>
-            
+
         </div>
         <div class="container body-container margin-top-16">
             <div class="row">
@@ -334,13 +334,13 @@
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
     <script>
         var gitment = new Gitment({
-          id: 'GayFriendsPageComments', // 可选。默认为 location.href
-          owner: 'inferjay',
-          repo: 'AndroidDevTools',
-          oauth: {
-            client_id: 'd2125d4a0d86391b925e',
-            client_secret: '70fb5a42e94b8d3d94c3a6d009eb60fabdc203da',
-          },
+            id: 'GayFriendsPageComments', // 可选。默认为 location.href
+            owner: 'inferjay',
+            repo: 'AndroidDevTools',
+            oauth: {
+                client_id: 'd2125d4a0d86391b925e',
+                client_secret: '70fb5a42e94b8d3d94c3a6d009eb60fabdc203da',
+            },
         })
         gitment.render('comments-container')
     </script>
@@ -351,40 +351,47 @@
     <script src="static/js/jquery-maven-artifact.min.js"></script>
     <script src="static/js/jquery.toTop.min.js"></script>
     <script>
-    $(function() {
-        $('.zh-backtotop').toTop();
-    });
+        $(function() {
+            $('.zh-backtotop').toTop();
+        });
     </script>
     <script type="text/javascript">
-    $(function() {
-        // Syntax highlight code blocks.
-        //prettyPrint();
+        $(function() {
+            // Syntax highlight code blocks.
+            //prettyPrint();
 
-        // Spy on scroll position for real-time updating of current section.
-        $('body').scrollspy();
+            // Spy on scroll position for real-time updating of current section.
+            $('body').scrollspy();
 
-        // Use smooth-scroll for internal links.
-        $('a').smoothScroll();
+            // Use smooth-scroll for internal links.
+            $('a').smoothScroll();
 
-        // Enable tooltips on the header nav image items.
-        $('.menu').tooltip({
-            placement: 'bottom',
-            trigger: 'hover',
-            container: 'body',
-            delay: {
-                show: 500,
-                hide: 0
-            }
+            // Enable tooltips on the header nav image items.
+            $('.menu').tooltip({
+                placement: 'bottom',
+                trigger: 'hover',
+                container: 'body',
+                delay: {
+                    show: 500,
+                    hide: 0
+                }
+            });
         });
-    });
     </script>
 
     <!-- Google Analytics -->
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-52369435-2', 'auto');
         ga('send', 'pageview');
@@ -396,7 +403,7 @@
         //bind a click
         $(document).bind('DOMNodeInserted', function(event) {
             $('a[href^="http"]').each(
-                function(){
+                function() {
                     if (!$(this).attr('target')) {
                         $(this).attr('target', '_blank')
                     }
