remove ivweb ad info

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fsxmbit9nlj30m60vgq8w.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="http://2018.tlc.ivweb.io/" title="" onclick="trackOutboundLink('http://2018.tlc.ivweb.io/', 'AD-IVWeb', 'click');" target="_blank">
                 <img src="https://ws1.sinaimg.cn/large/006tNc79gy1ftl9okam60j303m05twf1.jpg" style="height: 209px; width: 130px;">
             </a>
