remove Deep JVM ad info

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <img src="https://ws1.sinaimg.cn/large/006tNc79gy1ftl9okam60j303m05twf1.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="http://stuq.com/a/100kM" title="深入拆解 Java 虚拟机" onclick="trackOutboundLink('http://stuq.com/a/100kM', 'AD-GeekTime-Deep-JVM', 'click');" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNc79gy1ftdwsfqykyj30u01hcgor.jpg" style="height: 209px; width: 130px;">
             </a>
