add android studio 3.3 canary 8 links

--- a/index.html
+++ b/index.html
@@ -382,6 +382,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3 Canary 8 -->
+                            <tr>
+                                <td rowspan="5">3.3 Canary 8</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.7/android-studio-ide-182.4978721-windows.zip">android-studio-ide-182.4978721-windows.zip</a>
+                                </td>
+                                <td>1016735609 bytes</td>
+                                <td>acc298bc9cc15a09407f27f9ddf5c4704289a37d2a893ea8a8878035a6d404a6</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNbRwly1fv1z2z5u4hj31gg0u645e.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.7/android-studio-ide-182.4978721-windows32.zip">android-studio-ide-182.4978721-windows32.zip</a>
+                                </td>
+                                <td>1016207757 bytes</td>
+                                <td>6bdae5c1ab007f97590f01033608144a727f6df902ca338a1be9071b405f5bb1</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.7/android-studio-ide-182.4978721-mac.zip">android-studio-ide-182.4978721-mac.dmg</a>
+                                </td>
+                                <td>1008314785 bytes</td>
+                                <td>a4a9fcfb19ca67999224ed245ff21a2ee1e451ac4f7842dbf670ae3dece3c096</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.7/android-studio-ide-182.4978721-linux.zip">android-studio-ide-182.4978721-linux.zip</a>
+                                </td>
+                                <td>1022851140 bytes</td>
+                                <td>49a5c7bf5387104031607cf0f60724e39d8d7d4a06ed26853bdea8c0334f4175</td>
+                            </tr>
                             <!-- 3.2 RC2 -->
                             <tr>
                                 <td rowspan="5">3.2 RC2 </td>
