--- a/index.html
+++ b/index.html
@@ -382,6 +382,76 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3 Canary 9 -->
+                            <tr>
+                                <td rowspan="5">3.3 Canary 9</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.8/android-studio-ide-182.4978721-windows.zip">android-studio-ide-182.4978721-windows.zip</a>
+                                </td>
+                                <td>1043966500 bytes</td>
+                                <td>a4845c56db3d7877a60b770de61872a43866d639bd3b9f476db3e522988503e6</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/0069RVTdly1fv747ol2lhj31hm0oqagd.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.8/android-studio-ide-182.4978721-windows32.zip">android-studio-ide-182.4978721-windows32.zip</a>
+                                </td>
+                                <td>1043439297 bytes</td>
+                                <td>5f73456be8bba2dc78515915b5ed33c02974d287620048c1fb5033f82c580355</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.8/android-studio-ide-182.4978721-mac.zip">android-studio-ide-182.4978721-mac.dmg</a>
+                                </td>
+                                <td>1035571843 bytes</td>
+                                <td>0731f924e91883f8ac6aa4e69c19f36f4154b2d5729f1db6553f634cefb8f188</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.8/android-studio-ide-182.4978721-linux.zip">android-studio-ide-182.4978721-linux.zip</a>
+                                </td>
+                                <td>1050086051 bytes</td>
+                                <td>c169cfd74329e6ee8620c752fff220d649c7b664e56d1e0f94e1a456aba30779</td>
+                            </tr>
+                            <!-- 3.2 RC3 -->
+                            <tr>
+                                <td rowspan="5">3.2 RC3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.25/android-studio-ide-181.4987877-windows.zip">android-studio-ide-181.4987877-windows.zip</a>
+                                </td>
+                                <td>1048272793 bytes</td>
+                                <td>7f41c0dacee9341e4650fbacaccbdfc6ba734c20b8e9ff8621b2f4f4512db3a3</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/0069RVTdly1fv748f6yj3j31ha0jsn2e.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.25/android-studio-ide-181.4987877-windows32.zip">android-studio-ide-181.4987877-windows32.zip</a>
+                                </td>
+                                <td>1047744941 bytes</td>
+                                <td>6a659165064e321abea71866513ba3cbc5d9ebc3e2b88a48e1528b5233888565</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.25/android-studio-ide-181.4987877-mac.zip">android-studio-ide-181.4987877-mac.dmg</a>
+                                </td>
+                                <td>1039957794 bytes</td>
+                                <td>0a39b8af2c2e92317d4af0b308429a287bf798bbf773436f9d8e8a6615383d7d</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.25/android-studio-ide-181.4987877-linux.zip">android-studio-ide-181.4987877-linux.zip</a>
+                                </td>
+                                <td>1054388277 bytes</td>
+                                <td>f7a5c2da30e7ffd461796d662cd61b7861edc8bd66083af1e28041d6fb543157</td>
+                            </tr>
                             <!-- 3.3 Canary 8 -->
                             <tr>
                                 <td rowspan="5">3.3 Canary 8</td>
