added android studio 3.3 canary 13 links

--- a/index.html
+++ b/index.html
@@ -382,6 +382,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3 Canary 13 -->
+                            <tr>
+                                <td rowspan="5">3.3 Canary 13</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.12/android-studio-ide-182.5035453-windows.zip">android-studio-ide-182.5035453-windows.zip</a>
+                                </td>
+                                <td>1047368014 bytes</td>
+                                <td>1f12cc69b68165d5d9842e09d13510a58acdfb6740ecf2b283e5c42cf19319ee</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNbRwly1fvxb2nrcgmj30pl0a10us.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.12/android-studio-ide-182.5035453-windows32.zip">android-studio-ide-182.5035453-windows32.zip</a>
+                                </td>
+                                <td>1046840811 bytes</td>
+                                <td>b7adda2333cad34c4c0c09c405e957c0b0376727ec7157bfd98395307ae09b97</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.12/android-studio-ide-182.5035453-mac.zip">android-studio-ide-182.5035453-mac.dmg</a>
+                                </td>
+                                <td>1038917803 bytes</td>
+                                <td>8507d8e3468baeabe34c519fc4906e288637adb5e71a0b1aa0cd7496dfef70d2</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.12/android-studio-ide-182.5035453-linux.zip">android-studio-ide-182.5035453-linux.zip</a>
+                                </td>
+                                <td>1053431765 bytes</td>
+                                <td>47f19d79abe971dd41af1776fd01ac855171b408f9f9b49b0920b2406aa74f38</td>
+                            </tr>
                             <!-- 3.3 Canary 12 -->
                             <tr>
                                 <td rowspan="5">3.3 Canary 12</td>
