add android stuido 3.2.1 links

--- a/index.html
+++ b/index.html
@@ -382,6 +382,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2.1 正式版 -->
+                            <tr>
+                                <td rowspan="5">3.2.1 正式版</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.1.0/android-studio-ide-181.5056338-windows.exe">android-studio-ide-181.5056338-windows.exe</a>
+                                </td>
+                                <td>972275240 bytes</td>
+                                <td>6ee509f3391757fe87cc5c1e4970a0228fc1ad6ca34a8b31c0a28926179353a9</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNbRwly1fwdujtwpj5j31kw0yi482.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.1.0/android-studio-ide-181.5056338-windows32.zip">android-studio-ide-181.5056338-windows32.zip</a>
+                                </td>
+                                <td>1048878391 bytes</td>
+                                <td>3a61a587c90e358ab15d076d0306550564ad4cc5a8aa1dd0c22c6afd092e976a</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.1.0/android-studio-ide-181.5056338-mac.dmg">android-studio-ide-181.5056338-mac.dmg</a>
+                                </td>
+                                <td>1037217850 bytes</td>
+                                <td>b8d2b7add6a7c776d16a8e48bd35c3e2bba18b4717131d7b9a00fa416ebe4480</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.1.0/android-studio-ide-181.5056338-linux.zip">android-studio-ide-181.5056338-linux.zip</a>
+                                </td>
+                                <td>1055510234 bytes</td>
+                                <td>b9ec0d44f2feaafe1e3fbd1ed696bf325f9e05cfb6c1ace84dbf87ae249efa84</td>
+                            </tr>
                             <!-- 3.3 Canary 13 -->
                             <tr>
                                 <td rowspan="5">3.3 Canary 13</td>
