add ad and top banner

--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
         </div>
     </header>
     <div id="auto-scroll-ad-box" style="z-index: 10; right: 0px; position: absolute; top: 1012px;">
+        <div class="ad-float-right">
+            <a href="https://promotion.aliyun.com/ntms/act/vmpt/aliyun-group/home.html?userCode=j7dufdfe&utm_source=androiddevtools.cn&utm_medium=website-rightbar" title="【全民云计算升级】拼团上云更优惠，拉1人拼团，云服务器立享￥234" target="_blank">
+                <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fweuai7fnij303k03kt9c.jpg">
+            </a>
+        </div>
         <div class="ad-float-right hide">
             <a href="https://mp.weixin.qq.com/s/79meIJKrbPysafJufBnSXg" title="TensorFlow 官方微信公众号" onclick="trackOutboundLink('https://mp.weixin.qq.com/s/79meIJKrbPysafJufBnSXg', 'AD-TensorFlow-Wechat-QRCode', 'click');" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fml2ip3fa1j303m03mgll.jpg">
@@ -189,9 +194,9 @@
                 <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fsxmbit9nlj30m60vgq8w.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right hide">
-            <a href="http://2018.tlc.ivweb.io/" title="" onclick="trackOutboundLink('http://2018.tlc.ivweb.io/', 'AD-IVWeb', 'click');" target="_blank">
-                <img src="https://ws1.sinaimg.cn/large/006tNc79gy1ftl9okam60j303m05twf1.jpg" style="height: 209px; width: 130px;">
+        <div class="ad-float-right">
+            <a href="http://gk.link/a/100XH" title="算法面试通关 40 讲-Sophon Tech 创始人、前 Facebook 工程师、卡内基梅隆大学计算机硕士带你吃透大厂面试题" onclick="trackOutboundLink('http://gk.link/a/100XH', 'AD-GeekTime-Algorithm-interview', 'click');" target="_blank">
+                <img src="https://ws1.sinaimg.cn/large/006tNbRwly1fweuxmnii6j30780bmacb.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
         <div class="ad-float-right hide">
@@ -199,12 +204,12 @@
                 <img src="https://ws2.sinaimg.cn/large/006tNc79gy1ftdwsfqykyj30u01hcgor.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="http://stuq.com/a/100il" title="快速上手 Kotlin 开发" onclick="trackOutboundLink('http://stuq.com/a/100il', 'AD-GeekTime-Kotlin-dev', 'click');" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tKfTcly1ft4p96uuquj30yi1pd1kx.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D" title="Oracle首席工程师带你修炼 Java 内功" onclick="trackOutboundLink('https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D', 'AD-JiKeShiJian-Java-Core-36', 'click');"
                 target="_blank">
                 <img src="https://ws4.sinaimg.cn/large/006tNc79ly1fqxwpxb5d2j303m05tq3o.jpg">
@@ -255,23 +260,30 @@
 
     <div class="banner has-dots" id="ad-banner-list">
         <ul>
-            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fp57koe5ovj31kw0kx439.jpg); width: 25%;" data-link="https://developer.android.google.cn/preview/index.html?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-P-li"
-                data-event-type="click">
+            <li style="background-image: url(https://ws3.sinaimg.cn/large/006tNbRwly1fwetsi98l7j31ef0jogmj.jpg); width: 25%;" data-link="https://androidweekly.io/android-pie/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-P-li" data-event-type="click">
                 <div class="inner">
-                    <h1></h1>
-                    <p style="color: darkgray"></p>
-                    <a class="btn" href="https://developer.android.google.cn/preview/index.html?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('hhttps://developer.android.google.cn/preview/index.html', 'Android-P-Page', 'click');" title="">去看看</a>
+                    <h1>Android Pie</h1>
+                    <p style="color: darkgray">采用 AI 技术，让智能手机变得更智能、操作更简便且更贴合您的需求。</p>
+                    <a class="btn" href="https://androidweekly.io/android-pie/?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('https://androidweekly.io/android-pie/', 'Android-P-Page', 'click');" title="">去看看</a>
                 </div>
             </li>
-            <li style="background-image: url(https://ws4.sinaimg.cn/large/006tNc79ly1fitrz88tc8j31jk0goq71.jpg); width: 25%;" data-link="http://www.androidweekly.cn/android-oreo-dev-post-page/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-Oreo-Weixin-li"
+            <li class="hide" style="background-image: url(https://ws2.sinaimg.cn/large/006tNbRwly1fwf0de3gf3j31680eqgmc.jpg); width: 25%;" data-link="https://developer.android.google.cn/jetpack/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-Jetpack-li"
                 data-event-type="click">
+                <div class="inner">
+                    <h1>Android Jetpack</h1>
+                    <p style="color: darkgray">Android 软件组件的集合，使您更容易地开发优秀的 Android 应用程序。</p>
+                    <a class="btn" href="https://developer.android.google.cn/jetpack/?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('https://developer.android.google.cn/jetpack/', 'Android-Jetpack-Page', 'click');" title="">去试试</a>
+                </div>
+            </li>
+            <!-- <li class="hide" style="background-image: url(https://ws4.sinaimg.cn/large/006tNc79ly1fitrz88tc8j31jk0goq71.jpg); width: 25%;" data-link="http://www.androidweekly.cn/android-oreo-dev-post-page/?utm_source=androiddevtools_banner&amp;utm_medium=website"
+                data-tag="Android-Oreo-Weixin-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Oreo</h1>
                     <p style="color: darkgray">奥利奥</p>
                     <a class="btn" href="http://www.androidweekly.cn/android-oreo-dev-post-page/?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('http://www.androidweekly.cn/android-oreo-dev-post-page/', 'Android-Oreo-Post-Page', 'click');"
                         title="">去尝尝</a>
                 </div>
-            </li>
+            </li> -->
             <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tv4qwp4pj31jk0go0tb.jpg); width: 25%;" data-link="http://www.androidweekly.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="AndroidWeekly-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android 开发技术周报</h1>
@@ -279,13 +291,13 @@
                     <a class="btn" href="http://www.androidweekly.cn" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">去订阅</a>
                 </div>
             </li>
-            <li style="background-image: url(https://ws3.sinaimg.cn/large/006tNc79ly1fiu5wirrvsj31jk0gon4o.jpg); width: 25%;" data-link="https://developer.android.google.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Android-8.0-li" data-event-type="click">
+            <!-- <li style="background-image: url(https://ws3.sinaimg.cn/large/006tNc79ly1fiu5wirrvsj31jk0gon4o.jpg); width: 25%;" data-link="https://developer.android.google.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Android-8.0-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android 8.0 Oreo</h1>
                     <p>Android 奥利奥</p>
                     <a class="btn" href='https://developer.android.google.cn' onclick="trackOutboundLink('https://developer.android.google.cn', 'Android-8.0', 'click');" title="Android 奥利奥">去尝尝</a>
                 </div>
-            </li>
+            </li> -->
             <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu7q0q5h8j31jk0go770.jpg);" data-link="https://developer.android.google.cn/develop/index.html?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Android-Architecture-Components-li"
                 data-event-type="click">
                 <div class="inner">
@@ -305,16 +317,16 @@
                 <div class="inner">
                     <h1>Material Design</h1>
                     <p>开发者参考文档</p>
-                    <a class="btn" href='http://www.materialdoc.cn' onclick="trackOutboundLink('http://www.materialdoc.cn', 'Materialdoc', 'click');" title="开发者参考文档">去看看</a>
+                    <a class="btn" href='http://www.materialdoc.cn' onclick="trackOutboundLink('http://www.materialdoc.cn', 'Materialdoc', 'click');" title="开发者参考文档">去查查</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww3.sinaimg.cn/large/006tNc79gy1fe8qh3q29fj31jk0gotbc.jpg); width: 25%;" data-link="http://code-labs.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="CodeLabs-li" data-event-type="click">
+            <!-- <li class="hide" style="background-image: url(http://ww3.sinaimg.cn/large/006tNc79gy1fe8qh3q29fj31jk0gotbc.jpg); width: 25%;" data-link="http://code-labs.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="CodeLabs-li" data-event-type="click">
                 <div class="inner">
                     <h1>Code Labs</h1>
                     <p>各种 Google 技术的 Code Labs</p>
                     <a class="btn" href='http://code-labs.cn' onclick="trackOutboundLink('http://code-labs.cn', 'CodeLabs', 'click');" title="各种 Google 技术的 Code Labs">去试试</a>
                 </div>
-            </li>
+            </li> -->
             <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb4t09jj31jk0goq4c.jpg); width: 25%;" data-link="https://developers.google.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="GoogleDevelopers-li" data-event-type="click">
                 <div class="inner">
                     <h1>Google Developers</h1>
@@ -322,13 +334,13 @@
                     <a class="btn" href='https://developers.google.cn' onclick="trackOutboundLink('https://developers.google.cn', 'Google Developers', 'click');" title="官方 Google 开发者网站">去瞅瞅</a>
                 </div>
             </li>
-            <li style="background-image: url(http://ww4.sinaimg.cn/large/006tNc79ly1fem3vspxegj31e90g478v.jpg); width: 25%;" data-link="http://www.studyjamscn.com/?utm_source=androiddevtools.cn&utm_medium=website" data-tag="StudyJams-li" data-event-type="click">
+            <!-- <li class="hide" style="background-image: url(http://ww4.sinaimg.cn/large/006tNc79ly1fem3vspxegj31e90g478v.jpg); width: 25%;" data-link="http://www.studyjamscn.com/?utm_source=androiddevtools.cn&utm_medium=website" data-tag="StudyJams-li" data-event-type="click">
                 <div class="inner">
                     <h1>Google StudyJams</h1>
                     <p style="color: darkgray">Study Jams 活动可以帮助任何零基础的学员入门 Android 开发，无需任何费用，优秀学员还可以得到 Google 的纪念证书。</p>
                     <a class="btn" href="http://www.studyjamscn.com/" onclick="trackOutboundLink('http://www.studyjamscn.com/', 'StudyJams', 'click');" title="Study Jams 活动可以帮助任何零基础的学员入门 Android 开发，无需任何费用，优秀学员还可以得到 Google 的纪念证书">去瞅瞅</a>
                 </div>
-            </li>
+            </li> -->
         </ul>
     </div>
     <section id="body">
@@ -4843,7 +4855,12 @@
                         </ul>
                     </div>
                 </div>
-
+                <div id="ad-list" class="float-left">
+                    <h2>服务器</h2>
+                    <a href="https://promotion.aliyun.com/ntms/act/vmpt/aliyun-group/home.html?userCode=j7dufdfe&utm_source=androiddevtools.cn&utm_medium=website-bottom">
+                        <img src="https://ws4.sinaimg.cn/large/006tNbRwly1fwetq3nyf6j30xc0320td.jpg">
+                    </a>
+                </div>
                 <div id="license">
                     <h2>Disclaimer</h2>
                     <strong>版权归原作者所有，这里仅做收集整理，欢迎自由转载-非商用-非衍生-保持署名和本网站网址。</strong>
